# hplotlib

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
colortables/: rainbow.ctbl
examples/: BigGrid.cpp  CMakeLists.txt  CombinedPlots.cpp  ContourPlot.cpp  LogPlot.cpp  ManualSettings.cpp  MultiplePlots.cpp  SimpleLayout.cpp  SimplePlot.cpp  example-lines.cpp
ext/: CMakeLists.txt
ext/glld/: glld.c
fonts/: inconsolata.font
src/: AbstractPlotter.cpp  AbstractPlotter.hpp  AxisFlags.hpp  CMakeLists.txt  Canvas.cpp  Canvas.hpp  Color.cpp  Color.hpp  ColorBar.hpp  ColorTable.cpp  ColorTable.hpp  Contour.cpp  Contour.hpp  CooSyGeometry.cpp  CooSyGeometry.hpp  CoordinateAxis.cpp  CoordinateAxis.hpp  CoordinateAxis.inl  CoordinateSystem.cpp  CoordinateSystem.hpp  Delegate.hpp  Dir.cpp  Dir.hpp  Drawable.hpp  FileBrowser.cpp  FileBrowser.hpp  FixedLayout.cpp  FixedLayout.hpp  Flags.cpp  Flags.hpp  Flags.inl  Font.cpp  Font.hpp  FontLoader.cpp  FontLoader.hpp  FontTexture.cpp  FontTexture.hpp  Geometry.hpp  GridLayout.cpp  GridLayout.hpp  (+48 more)
src/GL/: glld.c
src/win32/: Sleep.cpp  Win32Window.cpp  Win32Window.hpp  Window.cpp
src/x11/: Sleep.cpp  Window.cpp  X11Window.cpp  X11Window.hpp
tests/: CMakeLists.txt  CustomTestPrinter.cpp  Main.cpp  Test-Flags.cpp  Test-Statistics.cpp  Test-Text.cpp  customtestprinter.cpp  customtestprinter.h  main.cpp
